--- a/docs/development/README.adoc
+++ b/docs/development/README.adoc
@@ -38,7 +38,8 @@ To start the installation:
 
 * run `./scripts/install.sh`. You need to run it only once.
 
-* run `./scripts/initialize.sh --stake-owner <address>` for each client. Ex. if you need to initialize a network with 3 clients, then run this script 3 times with a different <address>.
+* run `./scripts/initialize.sh --stake-owner <address>` for the default setup for each client. Default setup assumes that the staking provider, operator, beneficiary and an authorizer are all have the same addresses as the stake owner. Only the `stake-owner` has to be unique for the default setup. The default stake amount is `1,000,000 T` tokens. The default authorization amount is a min. authorization amount \n. 
+Ex. if you need to initialize a network with 3 clients with the default setup, then run this script 3 times with a different <address>.
 
 
 === Starting a client
