--- a/docs/development/README.adoc
+++ b/docs/development/README.adoc
@@ -34,12 +34,12 @@ The `+initialize.sh+` script will:
 
 Please refer to the scripts `help` for available command arguments and environment variables. `./install.sh --help` or `./initialize.sh --help`. Accounts unlocking and staking can be run outside of these scripts as standalone hardhat tasks.
 
-To start the installation:
+To deploy and initialize contracts:
 
 * run `./scripts/install.sh`. You need to run it only once.
 
-* run `./scripts/initialize.sh --stake-owner <address>` for the default setup for each client. Default setup assumes that the staking provider, operator, beneficiary and an authorizer are all have the same addresses as the stake owner. Only the `stake-owner` has to be unique for the default setup. The default stake amount is `1,000,000 T` tokens. The default authorization amount is a min. authorization amount \n. 
-Ex. if you need to initialize a network with 3 clients with the default setup, then run this script 3 times with a different <address>.
+* run `./scripts/initialize.sh --stake-owner <address>` for the default setup for each client. Default setup assumes that the staking provider, operator, beneficiary, and the authorizer are all have the same addresses as the stake owner. Only the `stake-owner` has to be unique for the default setup. The default stake amount is `1,000,000 T` tokens. The default authorization amount is the minimum authorization amount +
+Ex. if you need to initialize a network with 3 clients with the default setup, then run this script 3 times with a different `<address>`.
 
 
 === Starting a client
