Make default storage dir not hidden

--- a/docs/development/README.adoc
+++ b/docs/development/README.adoc
@@ -135,7 +135,7 @@ More on multiaddr format https://docs.libp2p.io/reference/glossary/#multiaddr[in
 
 |DataDir
 |Location to store the Keep nodes group membership details.
-|".storage/"
+|"storage/"
 |Yes
 |--datadir
 
