--- a/docs/development/README.adoc
+++ b/docs/development/README.adoc
@@ -69,6 +69,8 @@ run command with the `--config` flag. Example:
 ./keep-client --config /path/to/your/config.toml start
 ----
 
+Configuration files in formats TOML, YAML and JSON are supported.
+
 ====== Operator's Ethereum Key File
 
 Ethereum Key File is expected to be encrypted with a password. The password has
