--- a/docs/development/local-t-network.adoc
+++ b/docs/development/local-t-network.adoc
@@ -1,8 +1,11 @@
-:toc: macro
+:toc: left
+:toclevels: 3
+:sectanchors: true
+:sectids: true
+:source-highlighter: rouge
+:icons: font
 
 = Setting up local T network for development purposes
-
-toc::[]
 
 == Pre-requirements
 * Installed https://geth.ethereum.org/[Geth Ethereum client]. Please refer to the docs
