Use xref for cross references

--- a/docs/registration.adoc
+++ b/docs/registration.adoc
@@ -100,4 +100,4 @@ link:https://docs.threshold.network/extras/contract-addresses#keep-network-contr
 page for the recent Mainnet addresses of the contracts.
 // TODO: Add section with the Keep Network contracts addresses to the Threshold Network docs.
 
-For Testnet contracts please visit the link:./run-keep-node.adoc#testnet-contracts[link].
+For Testnet contracts please visit the xref:./run-keep-node.adoc#testnet-contracts[link].
