--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -2,6 +2,6 @@
 
 *Table of Contents*
 
-* link:./registration.html[Registration]
-* link:./run-keep-node.html[Run Keep Client Node]
-* link:./development/README.html[Developers]
+* xref:./registration.adoc[Registration]
+* xref:./run-keep-node.adoc[Run Keep Client Node]
+* xref:./development/README.adoc[Developers]
