--- a/docs/run-keep-node.adoc
+++ b/docs/run-keep-node.adoc
@@ -136,8 +136,6 @@ Default port mappings.
 If you set a different `port` in your configuration, or configure `peers` with
 non-default ports configured, firewall rules will need to be adjusted accordingly.
 
-// TODO: Add Metrics and Diagnostics
-
 ==== Minimum Required Configuration
 
 The minimum required configuration for the client to start covers setting:
@@ -178,8 +176,96 @@ GOLOG_TRACING_FILE=/var/log/keep/trace.json
 
 === Startup
 
-Below are some of the key things to look out for to make sure you're booted and connected to the
-network:
+Below are some of the key things to look out for to make sure you're booted and
+connected to the network:
+
+```
+▓▓▌ ▓▓ ▐▓▓ ▓▓▓▓▓▓▓▓▓▓▌▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▄
+▓▓▓▓▓▓▓▓▓▓ ▓▓▓▓▓▓▓▓▓▓▌▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+  ▓▓▓▓▓▓    ▓▓▓▓▓▓▓▀    ▐▓▓▓▓▓▓    ▐▓▓▓▓▓   ▓▓▓▓▓▓     ▓▓▓▓▓   ▐▓▓▓▓▓▌   ▐▓▓▓▓▓▓
+  ▓▓▓▓▓▓▄▄▓▓▓▓▓▓▓▀      ▐▓▓▓▓▓▓▄▄▄▄         ▓▓▓▓▓▓▄▄▄▄         ▐▓▓▓▓▓▌   ▐▓▓▓▓▓▓
+  ▓▓▓▓▓▓▓▓▓▓▓▓▓▀        ▐▓▓▓▓▓▓▓▓▓▓         ▓▓▓▓▓▓▓▓▓▓▌        ▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+  ▓▓▓▓▓▓▀▀▓▓▓▓▓▓▄       ▐▓▓▓▓▓▓▀▀▀▀         ▓▓▓▓▓▓▀▀▀▀         ▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▀
+  ▓▓▓▓▓▓   ▀▓▓▓▓▓▓▄     ▐▓▓▓▓▓▓     ▓▓▓▓▓   ▓▓▓▓▓▓     ▓▓▓▓▓   ▐▓▓▓▓▓▌
+▓▓▓▓▓▓▓▓▓▓ █▓▓▓▓▓▓▓▓▓ ▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓  ▓▓▓▓▓▓▓▓▓▓
+▓▓▓▓▓▓▓▓▓▓ ▓▓▓▓▓▓▓▓▓▓ ▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓  ▓▓▓▓▓▓▓▓▓▓
+
+Trust math, not hardware.
+
+------------------------------------------------------------------------------------------------
+| Keep Client Node                                                                             |
+|                                                                                              |
+| Port: 3919                                                                                   |
+| IPs : /ip4/127.0.0.1/tcp/3919/ipfs/16Uiu2HAmM2WfE4uwymj9n1EsaN5jL38cG79jCCSXLX49KoL18aZQ     |
+|       /ip6/::1/tcp/3919/ipfs/16Uiu2HAmM2WfE4uwymj9n1EsaN5jL38cG79jCCSXLX49KoL18aZQ           |
+|       /ip4/192.168.1.167/tcp/3919/ipfs/16Uiu2HAmM2WfE4uwymj9n1EsaN5jL38cG79jCCSXLX49KoL18aZQ |
+|       /ip4/10.2.0.2/tcp/3919/ipfs/16Uiu2HAmM2WfE4uwymj9n1EsaN5jL38cG79jCCSXLX49KoL18aZQ      |
+|                                                                                              |
+| Contracts:                                                                                   |
+| RandomBeacon   : 0x2bA82903B635a96154A515488d2952E86D6adc3A                                  |
+| WalletRegistry : 0x2363cc10b7680000C02E4a7067A68d1788ffc86F                                  |
+| TokenStaking   : 0x69f962a0fbA5635e84eC94131f9072108E2E4F24                                  |
+------------------------------------------------------------------------------------------------
+```
+
+TIP: If you want to share your LibP2P address with others you can get it from the
+startup log.  When sharing remember to substitute the `/ipv4/` address with the public facing IP of your client if you're running on a private machine, or replace the entire
+`/ipv4/` segment with a DNS entry if you're using a hostname.
+
+
+
+== Metrics
+
+The client exposes the following metrics:
+
+- connected peers count,
+- connected bootstraps count,
+- Ethereum client connectivity status (if a simple read-only CALL can be executed).
+
+Metrics can be enabled in the configuration `.toml` file. It is possible to customize port at which
+metrics endpoint is exposed as well as the frequency with which the metrics are collected.
+
+Exposed metrics contain the value and timestamp at which they were collected.
+
+Example metrics endpoint call result:
+```
+$ curl localhost:8080/metrics
+# TYPE connected_peers_count gauge
+connected_peers_count 108 1623235129569
+
+# TYPE connected_bootstrap_count gauge
+connected_bootstrap_count 10 1623235129569
+
+# TYPE eth_connectivity gauge
+eth_connectivity 1 1623235129789
+```
+
+== Diagnostics
+
+The client exposes the following diagnostics:
+
+- list of connected peers along with their network id and Ethereum operator address,
+- information about the client's network id and Ethereum operator address.
+
+Diagnostics can be enabled in the configuration `.toml` file. It is possible to customize port at which
+diagnostics endpoint is exposed.
+
+Example diagnostics endpoint call result:
+```
+$ curl localhost:8081/diagnostics
+{
+  "client_info" { 
+   "ethereum_address":"0xDcd4199e22d09248cA2583cBDD2759b2acD22381",
+   "network_id":"16Uiu2HAkzYFHsqbwt64ZztWWK1hyeLntRNqWMYFiZjaKu1PZgikN"
+  },
+  "connected_peers": [
+    {"ethereum_address":"0x3712C6fED51CECA83cA953f6FF3458f2339436b4","network_id":"16Uiu2HAkyYtzNoWuF3ULaA7RMfVAxvfQQ9YRvRT3TK4tXmuZtaWi"},
+    {"ethereum_address":"0x4bFa10B1538E8E765E995688D8EEc39C717B6797","network_id":"16Uiu2HAm9d4MG4LNrwkFmugD2pX7frm6ZmA4vE3EFAEjk7yaoeLd"}, 
+    {"ethereum_address":"0x650A9eD18Df873cad98C88dcaC8170531cAD2399","network_id":"16Uiu2HAkvjVWogUk2gq6VTNLQdFoSHXYpobJdZyuAYeoWD66e8BD"},
+    ...
+  ]
+}
+```
 
 == Testnet
 
@@ -189,6 +275,8 @@ To run the client connected to the Testnet add `--goerli` flag to the start comm
 A Docker image for Testnet is published under:
 `us-docker.pkg.dev/keep-test-f3e0/public/keep-client:latest` +
 See <<docker-testnet>> section for details.
+
+// === Faucet
 
 [#testnet-bootstrap,Testnet Bootstrap Nodes]
 === Bootstrap Nodes
@@ -217,7 +305,7 @@ include::../config/_peers/goerli[]
 |WalletRegistry
 |link:https://goerli.etherscan.io/address/0x2363cc10b7680000C02E4a7067A68d1788ffc86F#writeProxyContract[0x2363cc10b7680000C02E4a7067A68d1788ffc86F]
 
-|=== 
+|===
 
 [#docker-testnet,Docker Testnet]
 === Docker
